# clojure-reader

./: .dir-locals.el  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  bb.edn  readme.org
.cargo/: config.toml
.github/: dependabot.yml
.github/actions-rs/: grcov.yml
.github/workflows/: check.yml  coverage.yaml  release.yml
benchmarks/: Cargo.toml
benchmarks/benches/: bench.rs  read-string.rs
constexpr_edn/: Cargo.toml
constexpr_edn/examples/: example.rs
constexpr_edn/src/: lib.rs
examples/: get-nth.rs  read_quotes.rs  serde.rs  span.rs
examples/pico/: .gitignore  CMakeLists.txt  README.md  hello_edn.c
examples/pico/pico-edn/: Cargo.toml
examples/pico/pico-edn/src/: lib.rs
fuzz/: .gitignore  Cargo.toml  README.md  bb.edn
fuzz/fuzz_targets/: fuzz_target_1.rs
fuzz/libclojure-reader/: Cargo.toml
fuzz/src/fuzzer/: core.clj
fuzzer/: .gitignore  README.md  bb.edn  project.clj
fuzzer/libclojure-reader/: Cargo.toml
fuzzer/libclojure-reader/src/: lib.rs
fuzzer/src-java/foo/bar/: Rust.java
fuzzer/src/clojure/test_clojure/: generators.clj
fuzzer/src/fuzzer/: core.clj
fuzzer/test/fuzzer/: core_test.clj
src/: de.rs  edn.rs  error.rs  lib.rs  parse.rs  ser.rs
tests/: de.rs  display.rs  error_messages.rs  fuzz.rs  hash.rs  invalid.rs  navigation.rs  parse.rs  read.rs  read_big_nums.rs  read_floats.rs  ser.rs  unstable.rs
