[package]
name = "clojure-reader"
version = "0.3.0"
edition = "2021"
resolver = "2"
authors = ["Kevin Nakamura <grinkers@grinkers.net>"]
description = "A Clojure reader"
readme = "README.md"
repository = "https://github.com/grinkers/clojure-reader"
keywords = ["EDN", "no_std", "clojure", "serde" ]
license = "Zlib"

[package.metadata.docs.rs]
all-features = true

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
future-incompatible = "warn"
unsafe_code = "deny"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
allow_attributes = "warn"
indexing_slicing = "warn"
inline_always = "allow"
must_use_candidate = "allow"
unwrap_used = "warn"

[features]
arbitrary-nums = ["bigdecimal", "num-bigint"]
default = ["floats", "std" ]
floats = ["ordered-float"]
full = ["default", "arbitrary-nums", "derive"]
derive = ["serde"]
std = []

[dependencies]
bigdecimal = { version = "0.4.6", default-features = false, optional = true }
num-bigint = { version = "0.4.6", default-features = false, optional = true }
ordered-float = { version = "4.2", default-features = false, optional = true }
serde = { version = "^1.0", features = ["alloc"], default-features = false, optional = true }

[dev-dependencies]
serde_derive = "^1.0"

[[example]]
name = "serde"
required-features = ["derive"]